# llm-sql-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/sqlagent/: __init__.py  agent.py  cli.py  config.py  database.py  seed.py  tools.py
tests/: test_database.py  test_tools.py
