[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-sql-agent"
version = "1.0.0"
description = "A Claude-powered agent that answers natural-language questions over a SQL database using tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.39",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
